Correct outline colour for high contrast toggle

--- a/src/scss/components/_toggle-button.scss
+++ b/src/scss/components/_toggle-button.scss
@@ -147,6 +147,7 @@ $toggle-button-dimension: 4rem;
     .high-contrast-toggle-btn {
         color: var(--color-text);
         border-color: var(--color-text);
+        outline-color: var(--color-text);
     }
 
     .high-contrast-toggle-btn__icon {
